Correcting width issues for big-image. It was making the page have extra width on mobile

--- a/scss/uthsc.scss
+++ b/scss/uthsc.scss
@@ -79,11 +79,11 @@ padding:3%;
     background-position: 0 22%;
     background-repeat: no-repeat;
     background-size: 100% auto;
-    margin-left: -15px;
-    margin-right: -15px;
+    margin-left: 0;
+    margin-right: 0;
 	}
 .big-image-large {
-    margin-right: 0;
+    margin-left: -15px;
 	}
 	.hilton-image {
 		background-attachment: scroll;
